docs/2.10.0/docs/daml-finance/packages/implementations/daml-finance-claims.rst
.. Copyright (c) 2023 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
.. SPDX-License-Identifier: Apache-2.0

Daml.Finance.Claims.V3
######################

This package contains utility functions that facilitate building and working with
:doc:`Contingent Claims <../../instruments/generic/contingent-claims>` based instruments. It includes the
following modules:

- :ref:`Lifecycle.Rule <module-daml-finance-claims-lifecycle-rule-53980>`:
  Rule to process a lifecycle event for instruments that build a
  :doc:`Contingent Claims tree dynamically <../../tutorials/advanced-topics/instrument-modeling/contingent-claims-instrument>`.
- :ref:`Util <module-daml-finance-claims-util-5254>`:
  Contains utility functions for claims, e.g., checking the content of a claim and converting the
  claim time
- :ref:`Util.Lifecycle <module-daml-finance-claims-util-lifecycle-9534>`:
  Defines different types of events and how to lifecycle them
- :ref:`Util.Builders <module-daml-finance-claims-util-builders-48637>`:
  Utility functions related to creating :doc:`Contingent Claims <../../instruments/generic/contingent-claims>`,
  e.g. for bonds/swaps
- :ref:`Util.Date <module-daml-finance-claims-util-date-40505>`:
  Utility functions related to dates and schedule periods, which are used to define claims.

Changelog
*********
